grupo2diplomado-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grupo2diplomado
spec:
  type: ClusterIP  # Cambiado a ClusterIP para trabajar con Ingress
  ports:
    - port: 80  # El puerto que expone el Service internamente
      targetPort: 3000  # El puerto en el contenedor
      protocol: TCP # El protocolo de comunicacion
  selector:
    app: grupo2diplomado
