grupo2diplomado-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grupo2diplomado
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: grupo2diplomado
                port:
                  number: 80
            path: /app(/|$)(.*)
            pathType: ImplementationSpecific
